2001-10-20  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Schedule): Longer delays for 'street maintenance'
	to avoid slowdowns.

2001-10-19  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc (If_else_path_actor_action): Reset speed after being
	blocked.
	* usecode/intrinsics.cc: Return 'fake' schedule if walking on a
	path.  Fixes Fawn Trial bug where companions don't show up and
	game slows down.

2001-10-18  Jeff Freedman  <jeff@amy.nerble.net>

	* sigame.cc (SI_Game): Add patches to remove 'bad' egg and
	carpets.
	* objs/mappatch.cc, gamewin.cc:  Map patches.

2001-10-17  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Special case:  Magebane vs Vasculio.

	* shapes/monstinf.h (public): Immunity, vulnerability.
	* shapes/shapeinf.h: Damage_type.
	
	* objs/contain.cc (Container_game_object): Fixed dumb goof I made
	when I added the weight check.
	* actors.cc: Don't let Avatar die more than once, or let party be
	hurt if Avatar is dead.

2001-10-16  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,etc: set_telekenesis_fun(),
	get_item_usability() added to fix telekenesis, fetch spells.

2001-10-17  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actorio.cc: Cast changeover
	* gamedat.cc: Cast changeover
	* xdrag.cc: Cast changeover
	* gamewin.cc: Cast changeover

2001-10-16  Jeff Freedman  <jeff@amy.nerble.net>

	* palette.cc (Palette): find_color() shouldn't look at the
	rotating colors at the end of the palette.
	* npctime.cc,actors.cc,gamewin.cc:  Support for 'cursed' flag.

2001-10-15  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Ammo_info::read().
	* actors.cc: Handle a couple special weapon 'powers'.
	* shapes/shapeinf.h (public): Weapon 'powers' added.
	* actors.h (public): Fix for 'training' bug.

2001-10-14  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc: Watch for objects dropped when on a barge.

	* exult.cc,intrinsics.cc: Wizards_eye implemented.
